Prevent title and nav from overflowing

--- a/assets/css/src/base/layout.css
+++ b/assets/css/src/base/layout.css
@@ -61,6 +61,7 @@ body {
 .entry-title {
 	margin: 1rem auto;
 	max-width: var(--mdc-theme-max-content-width);
+	word-wrap: break-word;
 }
 
 .entry-content {
